Revelation changelog

---------------[ xxxx-xx-xx : 0.4.0 ]---------------

2004-11-03  Erik Grinaker <erikg@codepoet.no>

	* rewrote the FPM data handler

2004-10-30  Erik Grinaker <erikg@codepoet.no>

	* rewrote the Revelation and RevelationXML data handlers

	* changed the data handler API

	* added unit tests for the Revelation and RevelationXML
	data handlers

2004-10-23  Erik Grinaker <erikg@codepoet.no>

	* added util module, moved alot of code to it, and rewrote
	the code

	* added unit tests for util module

2004-10-22  Erik Grinaker <erikg@codepoet.no>

	* rewrote file handling to use gnome-vfs

	* added unit tests for io module

	* added unit tests for datahandler module

2004-09-18  Erik Grinaker <erikg@codepoet.no>

	* added ellpisis to menu items

	* changed the popular value threshold to 3

2004-09-17  Erik Grinaker <erikg@codepoet.no>

	* prepend the current account username to the username dropdown

	* activate searchbar button when hitting return in the entry

	* syncronize searchbar entry text with the entry searcher

2004-09-16  Erik Grinaker <erikg@codepoet.no>

	* copy password or other secret to clipboard when launching
	an account

	* added the users username to the username dropdown

2004-09-15  Erik Grinaker <erikg@codepoet.no>

	* use 18x18 pixel icons in the treeview

2004-09-13  Erik Grinaker <erikg@codepoet.no>

	* adapted the EntryDropdown to work for the search dialog

	* pasting entries now works again

	* the edit entry dialog now works again

	* use improved entry edit widgets

	* display undo/redo actions in menu items again

	* set priority flag on add and launch entry items

2004-09-11  Erik Grinaker <erikg@codepoet.no>

	* the gconf schema check didn't use the DIR_GCONFSCHEMAS
	variable

2004-09-09  Erik Grinaker <erikg@codepoet.no>

	* use new ConboBox widget for dropdown menus

	* the @schemadir@ make variable wasn't properly expanded

2004-09-06  Erik Grinaker <erikg@codepoet.no>
