@@ -1,0 +1,14 @@
+EXTRA_DIST= \
+	datahandler.py \
+	datahandler_fpm.py \
+	datahandler_rvl.py \
+	io.py \
+	util.py
+
+test:
+	python datahandler.py -v
+	python datahandler_fpm.py -v
+	python datahandler_rvl.py -v
+	python io.py -v
+	python util.py -v
+
